--- a/Src/Sample/Sample.CommandService/packages.config
+++ b/Src/Sample/Sample.CommandService/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="Autofac" version="4.6.2" targetFramework="net461" />
+  <package id="Autofac.Extensions.DependencyInjection" version="4.2.0" targetFramework="net461" />
   <package id="Autofac.Extras.DynamicProxy" version="4.4.0" targetFramework="net461" />
   <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net46" />
   <package id="Castle.Core" version="4.2.1" targetFramework="net461" />
@@ -11,6 +12,7 @@
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
   <package id="knockoutjs" version="3.4.2" targetFramework="net461" />
+  <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="Microsoft.AspNet.Cors" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="5.0.0" targetFramework="net45" />
@@ -29,16 +31,60 @@
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net461" />
   <package id="Microsoft.Data.Edm" version="5.8.3" targetFramework="net461" />
   <package id="Microsoft.Data.OData" version="5.8.3" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore" version="2.1.0-preview1-final" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore.Attributes" version="2.1.0-preview1-final" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore.InMemory" version="2.1.0-preview1-final" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore.Relational" version="2.1.0-preview1-final" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore.SqlServer" version="2.1.0-preview1-final" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="2.1.0-preview1-final" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="2.1.0-preview1-final" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration" version="2.1.0-preview1-final" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.0-preview1-final" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.0-preview1-final" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Xml" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="2.1.0-preview1-final" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.0-preview1-final" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging" version="2.1.0-preview1-final" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.0-preview1-final" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging.Log4Net.AspNetCore" version="2.0.3" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Options" version="2.1.0-preview1-final" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Primitives" version="2.1.0-preview1-final" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net461" />
+  <package id="Microsoft.NETCore.Platforms" version="2.1.0-preview1-26216-02" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net4" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
+  <package id="NETStandard.Library" version="2.1.0-preview1-25625-01" targetFramework="net461" />
+  <package id="NETStandard.Library.NETFramework" version="2.1.0-preview2-25630-02" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
+  <package id="Remotion.Linq" version="2.2.0" targetFramework="net461" />
   <package id="ServiceBus.v1_1" version="1.0.6" targetFramework="net461" />
+  <package id="System.Collections" version="4.3.0" targetFramework="net461" />
+  <package id="System.Collections.Immutable" version="1.5.0-preview1-26216-02" targetFramework="net461" />
+  <package id="System.ComponentModel.Annotations" version="4.5.0-preview1-26216-02" targetFramework="net461" />
+  <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net461" />
+  <package id="System.Data.SqlClient" version="4.5.0-preview1-26216-02" targetFramework="net461" />
+  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.5.0-preview1-26216-02" targetFramework="net461" />
+  <package id="System.Interactive.Async" version="3.1.1" targetFramework="net461" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net461" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Linq.Queryable" version="4.3.0" targetFramework="net461" />
+  <package id="System.ObjectModel" version="4.3.0" targetFramework="net461" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="net461" />
+  <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0-preview1-26216-02" targetFramework="net461" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Xml" version="4.4.0" targetFramework="net461" />
   <package id="System.Spatial" version="5.8.3" targetFramework="net461" />
+  <package id="System.Threading" version="4.3.0" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
