--- a/Src/Sample/Sample.CommandService/packages.config
+++ b/Src/Sample/Sample.CommandService/packages.config
@@ -42,7 +42,7 @@
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.0-preview1-final" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.0-preview1-final" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.0.1" targetFramework="net461" />
-  <package id="Microsoft.Extensions.Configuration.Xml" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Json" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection" version="2.1.0-preview1-final" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.0-preview1-final" targetFramework="net461" />
   <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.0.1" targetFramework="net461" />
